--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
         <div class="col-lg-12">
             <div class="image-wrapper m-auto">
                 <img src="images/jenish.jpg" alt="Jenish Sharma">
+                <nav class="navbar navbar-expand-lg navbar-light  nav-wrapper">
+                    <a class="navbar-brand mr-5" href="#">Jenish Sharma</a>
+                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button> -->
+                  
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto justify-content-end">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Education</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Skills & Trainings</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Experience</a>
+                        </li>
+                        <li class="nav-item mr-5">
+                          <a class="nav-link" href="#">Contact</a>
+                        </li>
+                          
+                      </ul>
+                    </div>
+                  </nav>
             </div>
         </div>
     </div>
